# main-project

./: .dockerignore  .env.example  .gitignore  Architecture.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2dcd96d33fe8_initial_crm_schema.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: __init__.py  audit_logs.py  auth.py  dashboard.py  deals.py  feature_snapshots.py  interactions.py  ml.py  organizations.py  reports.py  risk_predictions.py
app/core/: config.py  security.py
app/db/: __init__.py  base.py  session.py
app/ml/: __init__.py  predictor.py  prepare_datasets_from_csv.py  train_model.py
app/models/: __init__.py  audit_log.py  data_import_batch.py  deal.py  external_data_source.py  feature_snapshot.py  interaction.py  ml_model.py  organization.py  organization_contact.py  report.py  risk_prediction.py  role.py  user.py
app/schemas/: __init__.py  audit_log.py  auth.py  dashboard.py  deal.py  feature_snapshot.py  interaction.py  ml.py  organization.py  pagination.py  report.py  risk_prediction.py
app/scripts/: seed.py
app/scripts/utils/: ai_model.py  contacts.py  deals.py  organizations.py  (+2 more)
app/services/: __init__.py  audit.py
artifacts/: latest_validation_evaluation.json  risk_model.joblib  training_report.json  training_report.md  validation_predictions.csv
data/: train_dataset.csv  validation_dataset.csv
docs/: CONTEXT.md  ML_TRAINING.md
web/: Dockerfile  index.html  package-lock.json
web/src/: App.tsx  index.css  types.ts  utils.ts
(+49 files in other folders)
