[project]
name = "risk-crm-starter"
version = "0.1.0"
description = "CRM risk prediction database starter for dissertation application"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
