[project]
name = "risk-crm-starter"
version = "0.1.0"
description = "CRM risk prediction database starter for dissertation application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
